# episode_scraper

./: README.md  index.rst  pyproject.toml
docs/: conf.py  index.rst
docs/_autosummary/: scraper.implementations.captivate_selectors.rst  scraper.implementations.dtg_selectors.rst  scraper.scrape.rst
docs/_build/: .buildinfo  genindex.html  index.html  index_xx.html  indexbk.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  index_xx.doctree  indexbk.doctree
docs/_build/_modules/: modules.html  scraper.html  scraper.implementations.html  scraper.sql.html
docs/_build/_sources/: index.rst.txt  index_xx.rst.txt  indexbk.rst.txt
docs/_build/doctrees/: dtg.doctree  environment.pickle  index.doctree  indexbk.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
leg/scrapaw/: __init__.py  consts.py  get_soup.py  types.py
leg/scrapaw/abs/: __init__.py  pod_selectors.py
leg/scrapaw/concrete/: __init__.py  captivate_selectors.py  writer.py
leg/scrapaw/pyd/: dtg_fnc.py  dtg_pyd.py  write_abs.py
reqs/: requirements.txt
src/episode_scraper/: __init__.py  config.py  dtg.py  episode.py  episode_bot.py  episode_bot1.py  episode_bot2.py  episode_bot_dc.py  episode_db_model.py  episode_dc.py  episode_model.py  scraper.py  soups.py  writer.py  writer_dc.py
src/episode_scraper/old/: detail_soup.py  dtg_soup.py  episode_bot.py  list_soup.py  my_soup.py  pod_soup.py  podcast.py
src/scrapaw/: __init__.py  _write_abs.py  abs.py  abs1.py  captivate.py  consts.py  dtg.py  get_soup.py  pod_abs.py  scrapaw_config.py  scrape.py  selectors.py  writers.py  writers_fnc.py
src/scraper/: bilder.py  episode.py  types.py
src/soup-scraper/: scrape.py
tests/: index.rst  index_bk.rst  test_24.py  test_eps_bot.py  test_new.py  test_pyd_sett.py
(+46 files in other folders)
