[project]
name = "episode-scraper"
version = "0.1.0"
description = "Scrape Episodes"
authors = [
    { name = "paw", email = "paw@pawrequest.com" }
]
dependencies = [
    "aiohttp",
    "sqlmodel",
    "loguru",
    "beautifulsoup4",
    "python-dateutil",
    "pawsupport @ git+https://github.com/pawrequest/pawsupport",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    'pytest',
    'pytest-asyncio',
]

[tool.hatch.metadata]
allow-direct-references = true
