[project]
name = "scrapaw"
version = "0.1.0"
description = "Scrape Episodes"
authors = [
    { name = "paw", email = "paw@pawrequest.com" }
]
dependencies = [
    "aiohttp",
    "sqlmodel",
    "loguru",
    "beautifulsoup4",
    "python-dateutil",
    "suppawt",
]
readme = "index.rst"
requires-python = ">= 3.12"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinx-readme",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    'pytest',
    'pytest-asyncio',
]

[tool.hatch.metadata]
allow-direct-references = true
